--- a/projetoControleAtend/controleAtendimento/nbproject/private/private.properties
+++ b/projetoControleAtend/controleAtendimento/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\filip\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\aluno.EXPERT\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
