--- a/projetoControleAtend/controleAtendimento/nbproject/project.properties
+++ b/projetoControleAtend/controleAtendimento/nbproject/project.properties
@@ -29,10 +29,14 @@ dist.jar=${dist.dir}/controleAtendimento.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\filip\\OneDrive\\Docs\\Fil\\NetBeansProjects\\jcalendar-1.3.3\\jcalendar-1.3.3.jar
+file.reference.JTimeChooser_0.1.0.jar=C:\\Users\\filip\\OneDrive\\Docs\\Fil\\NetBeansProjects\\JTimeChooser_0.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.JTimeChooser_0.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=controleatendimento.form.Main
+main.class=controleatendimento.form.FormMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
