--- a/projetoControleAtend/controleAtendimento/nbproject/project.properties
+++ b/projetoControleAtend/controleAtendimento/nbproject/project.properties
@@ -30,13 +30,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\filip\\OneDrive\\Docs\\Fil\\NetBeansProjects\\jcalendar-1.3.3\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar-1=C:\\Users\\aluno.EXPERT\\Documents\\jcalendar-1.3.3.jar
 file.reference.JTimeChooser_0.1.0.jar=C:\\Users\\filip\\OneDrive\\Docs\\Fil\\NetBeansProjects\\JTimeChooser_0.1.0.jar
+file.reference.JTimeChooser_0.1.0.jar-1=C:\\Users\\aluno.EXPERT\\Documents\\JTimeChooser_0.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
-    ${file.reference.JTimeChooser_0.1.0.jar}
+    ${file.reference.JTimeChooser_0.1.0.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar-1}:\
+    ${file.reference.JTimeChooser_0.1.0.jar-1}:\
+    ${libs.MyLibrary.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
